# resolutionary

./: .gitignore  README.md  com.github.heidefinnischen.effective_screen.json  com.github.heidefinnischen.resolutionary.json  io.github.heidefinnischen.resolutionary.json  meson.build
.flatpak-builder/checksums/: x86_64-io.github.heidefinnischen.resolutionary.json
.flatpak-builder/git/https_github.com_heidefinnischen_resolutionary.git/: FETCH_HEAD  config
.flatpak-builder/git/https_github.com_heidefinnischen_resolutionary.git/objects/pack/: pack-272bdb71f5adb5218b2b0a4c330784ffc4af1131.idx  pack-272bdb71f5adb5218b2b0a4c330784ffc4af1131.pack  pack-272bdb71f5adb5218b2b0a4c330784ffc4af1131.rev  pack-4968bce88024224fd9f45c2f2f94ceebe14745b9.idx  pack-4968bce88024224fd9f45c2f2f94ceebe14745b9.pack  pack-4968bce88024224fd9f45c2f2f94ceebe14745b9.rev
cli-base/: main.py
data/: com.github.heidefinnischen.effective_screen.desktop.in  com.github.heidefinnischen.effective_screen.gschema.xml  com.github.heidefinnischen.effective_screen.metainfo.xml.in  com.github.heidefinnischen.effective_screen.service.in  com.github.heidefinnischen.resolutionary.desktop.in  com.github.heidefinnischen.resolutionary.gschema.xml  com.github.heidefinnischen.resolutionary.metainfo.xml.in  com.github.heidefinnischen.resolutionary.service.in  io.github.heidefinnischen.resolutionary.desktop.in  io.github.heidefinnischen.resolutionary.gschema.xml  io.github.heidefinnischen.resolutionary.metainfo.xml.in  io.github.heidefinnischen.resolutionary.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
repo/: summary  summary.idx
repo/summaries/: 1eb1f598437006c28b24c92bc02e9c962b4c203c08cd12945ef68316945a925f-d7e656511a52ae1159561f7dbac972d7345b9c73889ade6a1d9be857b7f9bb66.delta
src/: effective_screen_resolution_calculator.gresource.xml  effective_screen_resolution_calculator.in  main.py  meson.build  resolutionary.gresource.xml  resolutionary.in  style.css  window-bottom.ui  window-split.ui  window.py  window.ui
(+2 files in other folders)
